--- a/docker/template.env
+++ b/docker/template.env
@@ -32,5 +32,24 @@ DB_POSTGRESDB_USER=n8n
 DB_POSTGRESDB_PASSWORD=<TODO>
 DB_POSTGRESDB_DATABASE=n8n
 
+# Redis settings
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=<TODO>
+REDIS_DB=0
+
+# Qdrant settings
+QDRANT_HOST=qdrant
+QDRANT_PORT=6333
+QDRANT_GRPC_PORT=6334
+QDRANT_API_KEY=""
+
+# MQTT settings
+MQTT_HOST=mqtt
+MQTT_PORT=1883
+MQTT_WS_PORT=9001
+MQTT_USERNAME=mqtt_user
+MQTT_PASSWORD=<TODO>
+
 #  API Key
 OPENAI_API_KEY=<TODO>
